fix bbox wrong height & width after storing

--- a/tsboard/src/style.css
+++ b/tsboard/src/style.css
@@ -69,3 +69,11 @@ textarea {
 .madoka-runes {
   font-family: 'MadokaRunes';
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
